--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/fortify": "^1.11",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "prologue/alerts": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
